ft:add stats
